# profiled-swarm

./: .gitignore  LICENSE  ProfiledSwarm.spec  README.md  config.py  demo-deme-dns-attack.pcap  fabfile.py  generator.py  lib.py  log.py  main.py  manager.py  manager.toml  packets.py  profile.py  profile.py.old  profiled-swarm.py  pyproject.toml  run_fabric_dns.sh  run_fabric_streaming.sh  setup.py  utils.py
profiles/: base.py  ddos_dns.py  ntp_ampl.py
profiles.d/: ntp_ampl.py
