[project]
name = "profiled-swarm"
version = "0.1.0"
description = "Generator of Targeted Traffic with Profiles"
authors = [{ name = "Alex Carrega", email = "alessandro.carrega@unige.it" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "clize>=5.0.2,<6",
    "scapy>=2.5.0,<3",
    "loguru>=0.7.2,<0.8",
    "numpy>=2.0.1,<3",
    "dynaconf>=3.2.11,<4",
    "fabric>=3.2.2,<4",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
